hphp/hack/test/typecheck/coeffects/closures_explicit.php.exp
File "closures_explicit.php", line 10, characters 5-22:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 9, characters 24-25:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 5, characters 24-40:
  But the function being called requires the capability set {AccessStaticVariable, IO, Rx, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "closures_explicit.php", line 11, characters 5-16:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 9, characters 24-25:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 4, characters 23-24:
  But the function being called requires the capability set {Rx, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "closures_explicit.php", line 17, characters 5-22:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 14, characters 28-29:
  From this declaration, the context of this function body provides the capability set {Rx, WriteProperty}
  File "closures_explicit.php", line 5, characters 24-40:
  But the function being called requires the capability set {AccessStaticVariable, IO, Rx, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "closures_explicit.php", line 23, characters 14-34:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 23, characters 6-7:
  From this declaration, the context of this function body provides the capability set {Rx, WriteProperty}
  File "closures_explicit.php", line 21, characters 32-42:
  But the function being called requires the capability set {AccessStaticVariable, IO, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "closures_explicit.php", line 36, characters 7-20:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 33, characters 19-20:
  From this declaration, the context of this function body provides the capability set {Rx, WriteProperty}
  File "closures_explicit.php", line 29, characters 21-31:
  But the function being called requires the capability set {AccessStaticVariable, IO, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "closures_explicit.php", line 39, characters 7-18:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 38, characters 7-8:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 27, characters 19-20:
  But the function being called requires the capability set {Rx, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "closures_explicit.php", line 40, characters 7-16:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 38, characters 7-8:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 33, characters 19-20:
  But the function being called requires the capability set {Rx, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "closures_explicit.php", line 45, characters 7-20:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_explicit.php", line 38, characters 7-8:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_explicit.php", line 29, characters 21-31:
  But the function being called requires the capability set {AccessStaticVariable, IO, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
